--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "expo": "^51.0.32",
     "expo-linear-gradient": "~13.0.2",
@@ -25,6 +26,8 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-picker-select": "^9.3.1",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
