--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "datetimepicker": "^0.1.39",
     "expo": "^51.0.32",
     "expo-linear-gradient": "~13.0.2",
     "expo-sqlite": "~14.0.6",
