--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -17,7 +18,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "datetimepicker": "^0.1.39",
-    "expo": "^51.0.32",
+    "expo": "^51.0.37",
     "expo-linear-gradient": "~13.0.2",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
@@ -26,6 +27,7 @@
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
