--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
+    "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-toast-message": "^2.2.1",
