--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-masked-text": "^1.12.5",
+    "react-native-pager-view": "^6.5.0",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-root-siblings": "^5.0.1",
