--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-screens": "^3.34.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-toast-notifications": "^3.4.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-image": "~1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
