--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.4.1",
     "datetimepicker": "^0.1.39",
     "expo": "~51.0.39",
+    "expo-clipboard": "~6.0.3",
     "expo-document-picker": "~12.0.2",
     "expo-drizzle-studio-plugin": "^0.0.2",
     "expo-file-system": "~17.0.1",
@@ -46,8 +47,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-web": "~0.19.10",
-    "styled-components": "^6.1.13",
-    "expo-clipboard": "~6.0.3"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
